Fix spacing

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,5 @@
 .app {
   background-color: #9e7682;
   margin: 0;
-  padding-top: 10vh;
   min-height: 100vh;
 }
